[tool.poetry]
name = "repl_nix_Blue-bird"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
requests = "^2.31.0"
colorama = "^0.4.6"
Flask = "^2.3.2"
Pillow = "^10.0.0"
pyppeteer = "^1.0.2"
PyAutoGUI = "^0.9.54"
pytz = "^2023.3"
googletrans = "^3.0.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
